<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/todoFragment"
        android:enabled="true"
        android:icon="@drawable/ic__home"
        app:cnb_iconColor="@color/green"
        android:title="@string/Home" />
    <item
        android:id="@+id/articleFragment"
        android:enabled="true"
        android:icon="@drawable/ic_article"
        android:title="@string/Article" />

    <item
        android:id="@+id/cameraFragment"
        android:checked="true"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/camera"

        />
    <item
        android:id="@+id/reportFragment"
        android:enabled="true"
        android:icon="@drawable/ic_report"
        android:title="@string/Report" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />



</menu>